GH-892 Summary layout issue
Fixes GH-892

--- a/src/chart/Summary.css
+++ b/src/chart/Summary.css
@@ -4,6 +4,7 @@
 .chart_Summary {
     width: 225px;
     height: 150px;
+    font-size: 14px;
 }
 
 .chart_Summary .content h2 {
